Add in SCSS files and some style

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,3 +1,4 @@
-<div class="welcome">
-    <h1>{{ description }}</h1>
+<div class="main-wrapper">
+<h2>Mars Colony 1</h2>
+<h3>Tap circle to enter</h3>
 </div>
