--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,6 +5,16 @@
 // bower:scss
 // endbower
 
+/* IMPORT scss folders */ 
+
+@import "check-in/check-in";
+@import "encounters/encounters";
+@import "main/main";
+@import "report/report-filed";
+@import "report/report";
+
+
+
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
 
 $red-color: #ed4343;
@@ -16,6 +26,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: $red-font;
+  font-size: 16px;
 }
 
 
