--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,8 @@
 <div class="main-wrapper">
-<h2>Mars Colony 1</h2>
-<h3>Tap circle to enter</h3>
+
+	<div class="banner-image"
+		<h2>Mars Colony 1</h2>
+		<h3>Tap circle to enter</h3>
+	</div>
+	
 </div>
