--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,8 +1,11 @@
 <div class="main-wrapper">
 
-	<div class="banner-image"
+	<div class="banner-image">
+
 		<h2>Mars Colony 1</h2>
+		<button class="enter-button"></button>
 		<h3>Tap circle to enter</h3>
+
 	</div>
-	
+
 </div>
