Add style to Check-in page

--- a/src/app/check-in/_check-in.scss
+++ b/src/app/check-in/_check-in.scss
@@ -6,12 +6,54 @@
 	align-items:center;
 	justify-content: center;
 	flex-direction:column;
+	position: relative;
+	justify-content: space-around;
 }
 
-h2 {
-	font-size: 2rem;
+.checkin-wrapper h2 {
+	font-size: 2.4rem;
+	font-weight: lighter;
+	text-transform: none;
 }
 
-	Button {
+.checkin-form {
+	color: red;
+	display: flex;
+	width: 80%;
+	flex-direction: column;
+	font-size: 1.1rem;
+}
+
+.checkin-button {
 	font-size: 2rem;
+	background: #000000;
+	color: #ffffff;
+	font-size: 2.4rem;
+	font-weight: lighter;
+	border: #000000;
+	cursor: pointer;
+	font-family: 'Roboto', sans-serif;
+}
+
+.underline {
+	border-bottom: 1px solid #ffffff;
+	padding-top: 2rem;
+	padding-bottom: 0.25rem;
+}
+
+input {
+	background-color: #000000;
+	width: 100%;
+	border: none;
+	line-height: 2rem;
+}
+
+input::placeholder {
+	color: red;
+	font-size: 1.1rem;
+}
+
+input:focus {
+	color: #ffffff;
+	font-size: 1.1rem;
 }
