--- a/src/app/encounters/encounters.html
+++ b/src/app/encounters/encounters.html
@@ -1,7 +1,16 @@
 <div class="encounters-wrapper">
 
-<h2>Recent Encounters</h2>
-<h3>See an Alien? Report it!</h3>
-<Button>Report Encounter</Button>
+    <div class="encounters-top">
+      <h2>Recent Encounters</h2>
+      <h3>See an Alien? Report it!</h3>
+    </div>
+
+    <div>
+      <div>List goes here</div>
+    </div>
+
+    <div class="encounters-botton">
+      <Button>Report Encounter</Button>
+    </div>
 
 </div>
