Add Encounters Style

--- a/src/app/encounters/encounters.html
+++ b/src/app/encounters/encounters.html
@@ -5,12 +5,12 @@
       <h3>See an Alien? Report it!</h3>
     </div>
 
-    <div>
+    <div class="encounters-list">
       <div>List goes here</div>
     </div>
 
-    <div class="encounters-botton">
-      <Button>Report Encounter</Button>
+    <div class="encounters-bottom">
+      <Button class="encounter-button">Report Encounter</Button>
     </div>
 
 </div>
