--- a/src/app/encounters/_encounters.scss
+++ b/src/app/encounters/_encounters.scss
@@ -4,18 +4,48 @@
 	height: 100vh;
 	display: flex;
 	align-items:center;
-	justify-content: center;
 	flex-direction:column;
+	position: relative;
+	justify-content: space-around;
 }
 
-h2 {
-	font-size: 2rem;
+.encounters-top h2,
+.encounters-top h3 {
+	color: #000000;
+	text-transform: none;
 }
 
-h3 {
-	font-size: 1.25rem;
+.encounters-top h2 {
+	font-size: 2.4rem;
+	font-weight: lighter;
+	text-transform: none;
+	margin-bottom: 0.25px;
 }
 
-Button {
-	font-size: 2rem;
+.encounters-top h3 {
+	font-size: 1.1rem;
+	margin-top: 0.25px;
+}
+
+.encounters-list {
+	height: 70%;
+}
+.encounter-button {
+	font-size: 2.4rem;
+	font-weight: lighter;
+	color: #ffffff;
+	border: #000000;
+	background: #000000;
+	cursor: pointer;
+	font-family: 'Roboto', sans-serif;
+}
+
+.encounters-bottom {
+	background: #000000;
+	flex-basis: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	// height: 20%;
+	width: 100%;
 }
