Add additional Angular code in class

--- a/src/app/Report/report.html
+++ b/src/app/Report/report.html
@@ -2,5 +2,7 @@
 
 <h2>Report Encounter</h2>
 <h3>Safety on Mars is your responsibility</h3>
+<form>
 <Button>Submit Report</Button>
+</form>
 </div>
