--- a/src/app/check-in/_check-in.scss
+++ b/src/app/check-in/_check-in.scss
@@ -56,3 +56,16 @@ input:focus {
 	color: #ffffff;
 	font-size: 1.1rem;
 }
+
+// .show-validation {
+// 	transition: 0.5s linear all;
+// }
+
+// .show-validation {
+// 	input, select, textarea {
+// 		&.ng-invalid {
+// 			border-radius: 0;
+// 			animation: invalid-input 0.5s infinite;
+// 		}
+// 	}
+// }
