Add State Push to 2 Pages

--- a/src/app/check-in/_check-in.scss
+++ b/src/app/check-in/_check-in.scss
@@ -24,6 +24,11 @@
 	font-size: 1.1rem;
 }
 
+.checkin-form input {
+	color: #ffffff;
+	font-size: 1.1rem;
+}
+
 .checkin-button {
 	background: #000000;
 	color: #ffffff;
