--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,9 +1,9 @@
-<div class="main-wrapper">
+<div class="main-wrapper" ng-controller="MainCtrl">
 
 	<div class="banner-image">
 
 		<h2>Mars Colony 1</h2>
-		<button class="enter-button"></button>
+		<button class="enter-button" ng-click="goToCheckin($event)"></button>
 		<h3>Tap circle to enter</h3>
 
 	</div>
