--- a/src/app/Report/_report.scss
+++ b/src/app/Report/_report.scss
@@ -6,18 +6,71 @@
 	align-items:center;
 	justify-content: center;
 	flex-direction:column;
+	position: relative;
+	justify-content: space-around;
 }
 
-h2 {
-	font-size: 2rem;
+.report-top h2,
+.report-top h3 {
 	color: #ffffff;
+	text-transform: none;
 }
 
-h3 {
-	font-size: 1.25rem;
+.report-top h2 {
+	font-size: 2.4rem;
+	font-weight: lighter;
+	margin-bottom: 0.25px;
+}
+
+.report-top h3 {
+	font-size: 1rem;
+	margin-top: 0.25px;
+}
+
+.submit-button {
+	background: #000000;
 	color: #ffffff;
+	font-size: 2.4rem;
+	font-weight: lighter;
+	border: #000000;
+	cursor: pointer;
+	font-family: 'Roboto', sans-serif;
 }
 
-Button {
-	font-size: 2rem;
+.underline {
+	border-bottom: 1px solid #ffffff;
+	padding-top: 2rem;
+	margin-bottom: 1.25rem;
+}
+
+.report-form {
+	color: red;
+	display: flex;
+	width: 80%;
+	flex-direction: column;
+	font-size: 1.1rem;
+}
+
+
+.action-report {
+	margin: 4rem, 1rem;
+}
+
+.action-report textarea {
+	background-color: #ffffff;
+	width: 100%;
+	height: 175px;
+	border: none;
+	line-height: 2rem;
+}
+
+textarea::placeholder {
+	color: red;
+	font-size: 1.1rem;
+	position: left;
+}
+
+textarea:focus {
+	color: #000000;
+	font-size: 1.1rem;
 }
