--- a/src/app/Report/report.html
+++ b/src/app/Report/report.html
@@ -8,18 +8,14 @@
   <form action="" name="reportForm" class="report-form" ng-class="{'show-validation': showValidation}">
 
     <div class="underline">
-        <label for="">Select alien type</label>
-
-        <select placeholder="Select alien type" name="aliens" id="aliens" ng-model="aliens.alien_type">
-
-            <option value="">Select alien type</option>
-            <option  value="{{ alien.id }}" ng-repeat="alien in aliens">{{ alien.type }}</option>
-
+        <select placeholder="Select alien type" name="aliens" id="aliens" ng-model="encounter.atype">
+          <option value="">Select alien type</option>
+          <option  value="{{ alien.type }}" ng-repeat="alien in aliens">{{ alien.type }}</option>
         </select>
     </div>
 
     <div class="action-report">
-        <textarea type="text" placeholder="Action taken" ng-model="" required minlength="5"/></textarea>
+        <textarea type="text" placeholder="Action taken" ng-model="encounter.action" required minlength="5"/></textarea>
     </div>
 
 
