--- a/src/app/check-in/check-in.html
+++ b/src/app/check-in/check-in.html
@@ -12,13 +12,10 @@
 		</div>
 
 		<div class="underline">
-				<label for="">Select occupation</label>
 
-				<select placeholder="Select occupation" name="jobs" id="jobs" ng-model="colonist.job_id">
-
-					<option value="">Select occupation</option>
+				<select name="jobs" id="jobs" ng-model="colonist.job_id">
+					<option placeholder="Select occupation" value="">Select occupation</option>
 					<option  value="{{ job.id }}" ng-repeat="job in jobs">{{ job.name }}</option>
-
 				</select>
 		</div>
 
