--- a/src/app/check-in/check-in.html
+++ b/src/app/check-in/check-in.html
@@ -2,7 +2,7 @@
 
 	<h2>Register</h2>
 
-	<form action="" name="checkinForm" class="checkin-form" ng-class="{'show-validation': showValidation}">
+	<form action="" name="checkinForm" class="checkin-form" ng-class="{'invalid' : showValidation }" novalidate>
 		<div class="underline">
 				<input type="text" placeholder="Name" ng-model="colonist.name" required minlength="3"/>
 	  </div>
